replace Java 21 List APIs with Java 17 compatible calls